--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./script.js"
+    "start": "node script.js"
 
   },
   "repository": {
